--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div>
-  <app-tv [symbol]="'IRBR3'"></app-tv>
+  <app-tv [symbol]="'BBAS3'"></app-tv>
 </div>
