--- a/src/app/tv/tv.component.html
+++ b/src/app/tv/tv.component.html
@@ -1,1 +1,7 @@
+<button (click)="save()">Save</button>
+<div class="form-group">    
+    <input type="file"
+           id="file"
+           (change)="handleFileInput($event.target.files)">
+</div>
 <div id="tradingview"></div>
