--- a/src/app/tv/tv.component.html
+++ b/src/app/tv/tv.component.html
@@ -1,9 +1,15 @@
 <div style="display: flex;">
-<button (click)="save()">Save</button>
-<div class="form-group">    
-    <input type="file"
-           id="file"
-           (change)="handleFileInput($event.target.files)">
-</div>
+    <button (click)="save()">Save</button>
+    <div class="form-group">    
+        <input type="file"
+            id="file"
+            (change)="handleFileInput($event.target.files)">
+    </div>
+
+    <input type="checkbox" id="enableDescription" (change)="toggleDescription($event)">
+    <label style="margin-top: 2px;" for="enableDescription">Allow Description</label>
+
+    <input type="checkbox" id="enableLiveNotification" (change)="toggleLiveNotification($event)">
+    <label style="margin-top: 2px;" for="enableLiveNotification">Live Notification</label>
 </div>
 <div id="tradingview"></div>
