--- a/src/app/tv/tv.component.html
+++ b/src/app/tv/tv.component.html
@@ -11,5 +11,8 @@
 
     <input type="checkbox" id="enableLiveNotification" (change)="toggleLiveNotification($event)">
     <label style="margin-top: 2px;" for="enableLiveNotification">Live Notification</label>
+
+    <input type="checkbox" id="showIndicators" (change)="toggleShowIndicators($event)">
+    <label style="margin-top: 2px;" for="showIndicators">Show Indicators</label>
 </div>
 <div id="tradingview"></div>
