--- a/src/app/tv/tv.component.html
+++ b/src/app/tv/tv.component.html
@@ -14,5 +14,8 @@
 
     <input type="checkbox" id="showIndicators" (change)="toggleShowIndicators($event)">
     <label style="margin-top: 2px;" for="showIndicators">Show Indicators</label>
+
+    <input type="checkbox" id="showEMA" (change)="toggleShowEMA($event)">
+    <label style="margin-top: 2px;" for="showEMA">Show EMA Cross</label>
 </div>
 <div id="tradingview"></div>
